--- a/api_django/requirements.txt
+++ b/api_django/requirements.txt
@@ -2,8 +2,10 @@ asgiref==3.8.1
 attrs==25.3.0
 autobahn==24.4.2
 Automat==24.8.1
+certifi==2025.1.31
 cffi==1.17.1
 channels==4.2.2
+charset-normalizer==3.4.1
 constantly==23.10.4
 cryptography==44.0.2
 daphne==4.1.2
@@ -11,11 +13,15 @@ Django==5.2
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+dotenv==0.9.9
+drf-spectacular==0.28.0
 drf-yasg==1.21.10
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
 inflection==0.5.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 packaging==24.2
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
@@ -27,7 +33,10 @@ python-dotenv==1.1.0
 pytz==2025.2
 PyYAML==6.0.2
 redis==5.2.1
+referencing==0.36.2
+requests==2.32.3
 rest-framework-simplejwt==0.0.2
+rpds-py==0.24.0
 service-identity==24.2.0
 setuptools==78.1.0
 sqlparse==0.5.3
@@ -35,4 +44,5 @@ Twisted==24.11.0
 txaio==23.1.1
 typing_extensions==4.13.1
 uritemplate==4.1.1
+urllib3==2.3.0
 zope.interface==7.2
