--- a/api_django/requirements.txt
+++ b/api_django/requirements.txt
@@ -20,15 +20,19 @@ hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
 inflection==0.5.1
+iniconfig==2.1.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 packaging==24.2
+pluggy==1.5.0
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
 PyJWT==2.9.0
 pyOpenSSL==25.0.0
+pytest==8.3.5
+pytest-django==4.11.1
 python-dotenv==1.1.0
 pytz==2025.2
 PyYAML==6.0.2
