Atualiza configurações de segurança para utilizar variáveis de ambiente para as chaves do Recaptcha e Google OAuth2

--- a/dotenv_files/.env-example
+++ b/dotenv_files/.env-example
@@ -20,3 +20,6 @@ POSTGRES_USER="CHANGE-ME"
 POSTGRES_PASSWORD="CHANGE-ME"
 POSTGRES_HOST="psql"
 POSTGRES_PORT="5432"
+
+GOOGLE_CLIENT_ID=seu_client_id.apps.googleusercontent.com
+RECAPTCHA_SECRET_KEY=seu_recaptcha_secret_key
