--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,44 @@
 services:
+  django:
+    container_name: django
+    build: ./api_django
+    env_file: ./dotenv_files/.env
+    expose:
+      - "${API_PORT:-8000}"
+    ports:
+      - "8000:8000" #apenas em desenvolvimento
+    volumes:
+      - static_volume:/data/web/staticfiles
+    restart: unless-stopped
+    networks:
+      - backend
+    depends_on:
+      - psql
+      - redis
+
   psql:
     container_name: psql
     image: postgres:14-alpine
     ports:
       - "5432:5432"
     volumes:
-      - ./data/postgres/data:/var/lib/postgresql/data/
+      - database_volume:/var/lib/postgresql/data/
     env_file:
       - ./dotenv_files/.env
+    networks:
+      - backend
   redis:
     container_name: redis
     image: redis:alpine
     ports:
       - "6379:6379"
+    networks:
+      - backend
 
 volumes:
   static_volume:
+  database_volume:
 
+networks:
+  backend:
+  frontend:
