Atualiza configurações de CORS e organiza variáveis de ambiente para Google API e Mercado Pago no arquivo .env-example

--- a/dotenv_files/.env-example
+++ b/dotenv_files/.env-example
@@ -6,6 +6,7 @@ DEBUG="1"
 # Comma separated list of allowed hosts
 ALLOWED_HOSTS="*"
 CORS_ALLOWED_ORIGINS="*"
+CORS_ALLOW_ALL=True
 #ALLOWED_HOSTS="localhost, 127.0.0.1, 0.0.0.0:8000, 0.0.0.0"
 #CORS_ALLOWED_ORIGINS="http://localhost, http://localhost:8000, ws://localhost:8000, http://0.0.0.0:8000, ws://0.0.0.0:8000"
 
@@ -21,5 +22,10 @@ POSTGRES_PASSWORD="CHANGE-ME"
 POSTGRES_HOST="psql"
 POSTGRES_PORT="5432"
 
+# Google API settings
 GOOGLE_CLIENT_ID=seu_client_id.apps.googleusercontent.com
 RECAPTCHA_SECRET_KEY=seu_recaptcha_secret_key
+
+# Mercado Pago settings
+MERCADO_PAGO_ACCESS_TOKEN=seu_access_token
+MERCADO_PAGO_PUBLIC_KEY=seu_public_key
