Atualiza o Dockerfile e o docker-compose.yml para corrigir caminhos de build e ajusta o .env-example com comentários explicativos sobre o uso do POSTGRES_HOST.

--- a/api_django/Dockerfile
+++ b/api_django/Dockerfile
@@ -10,7 +10,7 @@ ENV DJANGO_SETTINGS_MODULE=core.settings
 COPY . .
 
 RUN mkdir -p /data/web/staticfiles
-RUN mv /app/favicon.ico /data/web/staticfiles/favicon.ico
+# RUN mv /app/favicon.ico /data/web/staticfiles/favicon.ico
 
 RUN python -m venv /venv
 RUN apt-get update && \
