--- a/dotenv_files/.env-example
+++ b/dotenv_files/.env-example
@@ -21,7 +21,7 @@ DB_ENGINE="django.db.backends.postgresql"
 POSTGRES_DB="CHANGE-ME"
 POSTGRES_USER="CHANGE-ME"
 POSTGRES_PASSWORD="CHANGE-ME"
-POSTGRES_HOST="psql"
+POSTGRES_HOST="psql" # se tiver dentro do container, usar nome do serviço: psql | fora usar localhost ou IP da máquina 127.0.0.1
 POSTGRES_PORT="5432"
 
 # Google API settings
