--- a/dotenv_files/.env-example
+++ b/dotenv_files/.env-example
@@ -1,33 +1,57 @@
+# Aplicação / segurança
 SECRET_KEY="CHANGE-ME"
-
-# 0 False, 1 True
+# DEBUG: 0/1 ou true/false
 DEBUG="1"
 
-# Comma separated list of allowed hosts
-# CSRF_TRUSTED_ORIGINS: Lista de domínios que podem acessar o site quando DEBUG=False
-CSRF_TRUSTED_ORIGINS = "https://prdl.shop, https://www.prdl.shop, http://localhost:8000"
+# Hosts e CSRF
+# Lista separada por vírgula. Use domínio(s) em produção.
 ALLOWED_HOSTS="*"
-CORS_ALLOWED_ORIGINS="*"
+CSRF_TRUSTED_ORIGINS="https://prdl.shop,https://www.prdl.shop,http://localhost:8000"
+
+# CORS
 CORS_ALLOW_ALL=True
-#ALLOWED_HOSTS="localhost, 127.0.0.1, 0.0.0.0:8000, 0.0.0.0"
-#CORS_ALLOWED_ORIGINS="http://localhost, http://localhost:8000, ws://localhost:8000, http://0.0.0.0:8000, ws://0.0.0.0:8000"
+CORS_ALLOWED_ORIGINS="*"
 
-# Timezone and language code
-LANGUAGE_CODE = 'pt-br'
-TIME_ZONE = 'America/Manaus'
+# Localização
+LANGUAGE_CODE="pt-br"
+TIME_ZONE="America/Manaus"
 
-# Database settings
+# Banco de dados (Postgres)
 DB_ENGINE="django.db.backends.postgresql"
 POSTGRES_DB="CHANGE-ME"
 POSTGRES_USER="CHANGE-ME"
 POSTGRES_PASSWORD="CHANGE-ME"
-POSTGRES_HOST="psql" # se tiver dentro do container, usar nome do serviço: psql | fora usar localhost ou IP da máquina 127.0.0.1
+# POSTGRES_HOST="psql"        # rodando o make run-docker use esse
+POSTGRES_HOST="127.0.0.1"     # rodando o make run-dev use esse
 POSTGRES_PORT="5432"
 
-# Google API settings
-GOOGLE_CLIENT_ID=seu_client_id.apps.googleusercontent.com
-RECAPTCHA_SECRET_KEY=seu_recaptcha_secret_key
+# Google / Social
+GOOGLE_CLIENT_ID="seu_client_id.apps.googleusercontent.com"
+RECAPTCHA_SECRET_KEY="seu_recaptcha_secret_key"
 
-# Mercado Pago settings
-MERCADO_PAGO_ACCESS_TOKEN=seu_access_token
-MERCADO_PAGO_PUBLIC_KEY=seu_public_key
+# Mercado Pago (opcional)
+MERCADO_PAGO_ACCESS_TOKEN="seu_access_token"
+MERCADO_PAGO_PUBLIC_KEY="seu_public_key"
+
+# Email (SMTP) — configurar para envio de e-mails (reset senha, confirmações, etc.)
+DEFAULT_FROM_EMAIL="no-reply@example.com"
+EMAIL_BACKEND="django.core.mail.backends.smtp.EmailBackend"
+EMAIL_HOST="smtp.example.com"
+EMAIL_PORT="587"               # 587 para STARTTLS, 465 para SSL
+EMAIL_HOST_USER="smtp_user"
+EMAIL_HOST_PASSWORD="smtp_password"
+EMAIL_USE_TLS=True             # True se usar STARTTLS
+EMAIL_USE_SSL=False            # True se usar SSL direto (porta 465)
+
+# JWT / Auth (opcionais)
+# JWT_ACCESS_TOKEN_LIFETIME_DAYS="1"
+# JWT_REFRESH_TOKEN_LIFETIME_DAYS="30"
+
+# Outras variáveis úteis
+# APP_NAME é usado em templates de e-mail
+APP_NAME="My App"
+
+# Notas:
+# - Não deixe espaços em volta do '=' — evita erros quando um script tentar "source" o arquivo.
+# - Substitua valores "CHANGE-ME" antes de rodar em produção.
+# - Variáveis sensíveis NÃO devem ir para o repositório em produção; use secret manager / CI vars.
