--- a/api_django/docker-compose.yml
+++ b/api_django/docker-compose.yml
@@ -23,10 +23,6 @@ services:
     image: postgres:14-alpine
     ports:
       - "5432:5432"
-    environment:
-      - POSTGRES_DB=${POSTGRES_DB:-aplication_db}
-      - POSTGRES_USER=${POSTGRES_USER:-aplication_user}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-aplication_password}
     volumes:
       - database_volume:/var/lib/postgresql/data/
     env_file:
@@ -41,6 +37,16 @@ services:
       - "6379:6379"
     networks:
       - backend
+
+  mailhog: # manter em dev somente
+    container_name: mailhog
+    image: mailhog/mailhog:latest
+    ports:
+      - "1025:1025"   # SMTP
+      - "8025:8025"   # Web UI
+    networks:
+      - backend
+    restart: unless-stopped
 
 volumes:
   static_volume:
